--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@shopify/react-native-skia": "^1.10.2",
         "react": "18.3.1",
-        "react-native": "0.76.5"
+        "react-native": "0.76.5",
+        "react-native-vector-icons": "^10.2.0"
     }
 }
