--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "0.1.0",
     "main": "src/BingoGame.jsx",
     "dependencies": {
-        "@shopify/flash-list": "^1.7.2",
         "react": "18.3.1",
-        "react-native": "0.76.5",
-        "react-native-vector-icons": "^10.2.0"
+        "react-native": "0.76.5"
     }
 }
